update deploy script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,10 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Create CNAME file
+        run: |
+          echo "megapaniniverona.it" > ./dist/CNAME
+
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
         with:
